Fix package versioning break
Change https://github.com/dotnet/buildtools/commit/daac863e9ea367338d6295c42264a58f4eb5bf1e
broke package build.  Two problems: BuildNumberMinor was not defined,
and NuGet didn't like a dash followed by a 2-part version (eg -00001.00)

For now I've changed to use a hyphen instead of a dash.  We may want to
file a bug on NuGet for this.

--- a/src/Microsoft.DotNet.Build.Tasks.Packaging/src/PackageFiles/Packaging.targets
+++ b/src/Microsoft.DotNet.Build.Tasks.Packaging/src/PackageFiles/Packaging.targets
@@ -13,7 +13,7 @@
     <IncludeBuildNumberInPackageVersion Condition="'$(IncludeBuildNumberInPackageVersion)' == ''">true</IncludeBuildNumberInPackageVersion>
 
     <VersionSuffix Condition="'$(PreReleaseLabel)' != ''">-$(PreReleaseLabel)</VersionSuffix>
-    <VersionSuffix Condition="'$(IncludeBuildNumberInPackageVersion)' == 'true'">$(VersionSuffix)-$(BuildNumberMajor).$(BuildNumberMinor)</VersionSuffix>
+    <VersionSuffix Condition="'$(IncludeBuildNumberInPackageVersion)' == 'true'">$(VersionSuffix)-$(BuildNumberMajor)-$(BuildNumberMinor)</VersionSuffix>
     
     <!--
       Empty out the project properties because we want configuration and platform to come from the individual
