--- a/src/Microsoft.DotNet.Build.Tasks.Packaging/src/PackageFiles/Packaging.targets
+++ b/src/Microsoft.DotNet.Build.Tasks.Packaging/src/PackageFiles/Packaging.targets
@@ -107,6 +107,7 @@
   <UsingTask TaskName="UpdatePackageIndex" AssemblyFile="$(PackagingTaskDir)Microsoft.DotNet.Build.Tasks.Packaging.dll"/>
   <UsingTask TaskName="GetPackageFromModule" AssemblyFile="$(PackagingTaskDir)Microsoft.DotNet.Build.Tasks.Packaging.dll"/>
   <UsingTask TaskName="FilterUnknownPackages" AssemblyFile="$(PackagingTaskDir)Microsoft.DotNet.Build.Tasks.Packaging.dll"/>
+  <UsingTask TaskName="GeneratePackageReport" AssemblyFile="$(PackagingTaskDir)Microsoft.DotNet.Build.Tasks.Packaging.dll"/>
   
   <!-- Determine if we actually need to build for this architecture -->
   <!-- Packages can specifically control their architecture by specifying the PackagePlatforms
@@ -1028,9 +1029,21 @@
                     Condition="'%(PackageFile.IsSourceCodeFile)'!='true'" />
     </ItemGroup>
   </Target>
+  
+  <Target Name="GeneratePackageReport"
+          DependsOnTargets="GetPackageAssets">
+    <GeneratePackageReport
+                     PackageId="$(Id)"
+                     PackageVersion="$(PackageVersion)"
+                     Files="@(PackageAsset)"
+                     Frameworks="@(DefaultValidateFramework)"
+                     RuntimeFile="$(RuntimeIdGraphDefinitionFile)"
+                     FrameworkListsPath="$(FrameworkListsPath)"
+                     ValidationReport="$(PackageReportPath)" />
+  </Target>
 
   <Target Name="ValidatePackage"
-          DependsOnTargets="GetPackageAssets"
+          DependsOnTargets="GetPackageAssets;GeneratePackageReport"
           Condition="'$(SkipValidatePackage)' != 'true'">
 
     <ItemGroup>
