--- a/src/Microsoft.DotNet.Build.Tasks.Packaging/src/Microsoft.DotNet.Build.Tasks.Packaging.csproj
+++ b/src/Microsoft.DotNet.Build.Tasks.Packaging/src/Microsoft.DotNet.Build.Tasks.Packaging.csproj
@@ -60,7 +60,7 @@
     <Compile Include="PackagingTask.cs" />
     <Compile Include="SplitReferences.cs" />
     <Compile Include="ValidatePackage.cs" />
-    <Compile Include="ValidationReport.cs" />
+    <Compile Include="PackageReport.cs" />
     <Compile Include="VersionUtility.cs" />
   </ItemGroup>
   <ItemGroup>
