--- a/src/Microsoft.DotNet.Build.Tasks.Packaging/src/PackageFiles/PackageLibs.targets
+++ b/src/Microsoft.DotNet.Build.Tasks.Packaging/src/PackageFiles/PackageLibs.targets
@@ -5,6 +5,7 @@
     <GenerationDefinitionFile Condition="'$(GenerationDefinitionFile)' == ''">$(MSBuildThisFileDirectory)Generations.json</GenerationDefinitionFile>
     <RuntimeIdGraphDefinitionFile Condition="'$(RuntimeIdGraphDefinitionFile)' == '' AND Exists('$(ProjectDir)pkg/Microsoft.NETCore.Platforms/runtime.json')">$(ProjectDir)pkg/Microsoft.NETCore.Platforms/runtime.json</RuntimeIdGraphDefinitionFile>
     <RuntimeIdGraphDefinitionFile Condition="'$(RuntimeIdGraphDefinitionFile)' == ''">$(MSBuildThisFileDirectory)runtime.json</RuntimeIdGraphDefinitionFile>
+    <BuildPackageLibraryReferences Condition="'$(BuildPackageLibraryReferences)' == ''">true</BuildPackageLibraryReferences>
   </PropertyGroup>
 
   <UsingTask TaskName="GetApplicableAssetsFromPackages" AssemblyFile="$(PackagingTaskDir)Microsoft.DotNet.Build.Tasks.Packaging.dll"/>
@@ -38,7 +39,21 @@
                                      RuntimeFile="$(RuntimeIdGraphDefinitionFile)">
       <Output TaskParameter="CompileAssets" ItemName="Reference" />
       <Output TaskParameter="RuntimeAssets" ItemName="ReferenceCopyLocalPaths" />
+      <Output TaskParameter="BuildProjects" ItemName="_buildProjects" />
     </GetApplicableAssetsFromPackages>
+
+    <ItemGroup>
+      <_buildProjects>
+        <UndefineProperties>%(ProjectReference.UndefineProperties);TestTFM;FilterToTestTFM</UndefineProperties>
+      </_buildProjects>
+    </ItemGroup>
+
+    <!-- Build only the projects we need, and only if BuildPackageLibraryReferences is set -->
+    <MSBuild Targets="Build"
+             BuildInParallel="$(BuildInParallel)"
+             Condition="'$(BuildPackageLibraryReferences)' == 'true' AND '$(DesignTimeBuild)' != 'true'"
+             Projects="@(_buildProjects)"
+             ContinueOnError="WarnAndContinue"/>
   </Target>
   
   <!-- Returns the set of files to be included in the nuget package
